<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:weightSum="4">


        <TextView
            android:id="@+id/city"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2.52"
            android:gravity="center"
            android:text="Rzeszow"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_03d" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.46"
            android:gravity="center"
            android:text="18 °C"
            android:textSize="20dp" />

        <CheckBox
            android:id="@+id/checked"
            style="@android:style/Widget.DeviceDefault.CompoundButton.CheckBox"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp" />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/date"
        android:textSize="12dp"
        android:text="12:00 12.12.1994"
        android:textAlignment="center"
        android:layout_margin="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:id="@+id/windLayout"
        android:layout_margin="10dp">


        <TextView
            android:id="@+id/windText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wind"
            android:textAlignment="center"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/wind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Data : 12.12.1994"
            android:textAlignment="center"
            android:textSize="12dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:id="@+id/cloudLayout">


        <TextView
            android:id="@+id/cloudText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cloud"
            android:textAlignment="center"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/cloud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Data : 12.12.1994"
            android:textAlignment="center"
            android:textSize="12dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:layout_margin="10dp">


        <TextView
            android:id="@+id/pressureText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pressure"
            android:textAlignment="center"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Data : 12.12.1994"
            android:textAlignment="center"
            android:textSize="12dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:id="@+id/rainLayout">


        <TextView
            android:id="@+id/rainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/rain"
            android:textAlignment="center"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/rain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Data : 12.12.1994"
            android:textAlignment="center"
            android:textSize="12dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:id="@+id/snowLayout">


        <TextView
            android:id="@+id/snowText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/snow"
            android:textAlignment="center"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/snow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Data : 12.12.1994"
            android:textAlignment="center"
            android:textSize="12dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:layout_margin="10dp">


        <TextView
            android:id="@+id/humidityText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/humidity"
            android:textAlignment="center"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Data : 12.12.1994"
            android:textAlignment="center"
            android:textSize="12dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:layout_margin="10dp">


        <TextView
            android:id="@+id/sunriseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sunrise"
            android:textAlignment="center"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/sunrise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Data : 12.12.1994"
            android:textAlignment="center"
            android:textSize="12dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:layout_margin="10dp">


        <TextView
            android:id="@+id/sunsetText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sunset"
            android:textAlignment="center"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/sunset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Data : 12.12.1994"
            android:textAlignment="center"
            android:textSize="12dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:layout_margin="10dp">


        <TextView
            android:id="@+id/geocordsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Geocords"
            android:textAlignment="center"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/geocords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Data : 12.12.1994"
            android:textAlignment="center"
            android:textSize="12dp" />
    </LinearLayout>

</LinearLayout>